# ytdl-inline-bot

./: Dockerfile  README.md  entrypoint.sh  global_rules.md  pyproject.toml
.github/workflows/: build_and_push.yml  check_types.yml  deploy_latest.yml  on_master_push.yml  on_pull_request.yml  on_schedule_update_dependencies.yml  run_tests.yml
.windsurf/rules/: 1-overview.md  windsurfrules.md  yt-dlp_readme.md
ytdl_inline_bot/: __init__.py  bot.py  bot_instance.py  config.py  handlers.py  main.py  models.py  run.py  utils.py
