[tool.poetry]
name = "ytdl-inline-bot"
version = "0.1.0"
description = ""
authors = ["Ilia Burakov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = {extras = ["default"], version = "^2025.10.22"}
certifi = "^2025.10.5"
brotli = "^1.1.0"
websockets = "^15.0.1"
requests = "^2.32.5"
curl-cffi = "^0.13.0"
pycryptodome = "^3.23.0"
aiogram = "^3.22.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.2"
types-beautifulsoup4 = "^4.12.0.20250516"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytdlbot = "ytdl_inline_bot.bot:main"

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true
