[tool.poetry]
name = "ytdl-inline-bot"
version = "0.1.0"
description = ""
authors = ["Ilia Burakov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
yt-dlp = {extras = ["default"], version = "^2026.3.17"}
certifi = "^2026.2.25"
brotli = "^1.2.0"
websockets = "^16.0"
requests = "^2.33.1"
curl-cffi = "^0.15.0"
pycryptodome = "^3.23.0"
aiogram = "^3.27.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
types-beautifulsoup4 = "^4.12.0.20250516"

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytdlbot = "ytdl_inline_bot.bot:main"

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true
